Fix issue where login form is not centered

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,8 @@ body {
 }
 
 .form-background {
+  margin-right: auto;
+  margin-left: auto;
   background-color: #f9eae1;
 }
 
